[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/boxes/HurtBox.gd" type="Script" id=1]

[node name="HurtBox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_DisableTimer_timeout"]
